# reddit-nlp

./: .gitignore  Makefile  README.md  get-tcl-path.py  mypy.ini  pognlp.spec  pyproject.toml
backend/: download.py
pognlp/: analyze.py  app.py  constants.py  pognlp.py  util.py  vader_lexicon.py
pognlp/model/: corpus.py  lexicon.py  report.py
pognlp/view/: buttons.py  common.py  corpus_list.py  create_corpus.py  create_lexicon.py  create_report.py  dashboard.py  dictionary_dashboard.py  home.py  lexica.py  lexicon_list.py  report_dashboard.py  report_list.py  report_view.py  reports.py  sidebar.py  theme.py
pyinstaller-hooks/: hook-spacy.py
src/: app.py  buttons.py  constants.py  corpus.py  create_report_form.py  dashboard.py  dictionary_dash.py  navbar.py  report.py  report_dash.py  side_listbox.py  side_navbar.py  sidebar.py  start.py  theme.py  top_navbar.py
