[tool.poetry]
name = "pognlp"
version = "0.1.0"
description = ""
authors = ["Evan Goode <egoode6@gatech.edu>", "Celine MacKe <cmacke@gatech.edu>"]
license = "The Unlicense"

[tool.poetry.scripts]
pognlp = "pognlp.app:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
python-dateutil = "^2.8.1"
praw = "^7.2.0"
vaderSentiment = "^3.3.2"
appdirs = "^1.4.4"
numpy = "^1.20.0"
black = "^20.8b1"
pre-commit = "^2.10.1"
tkthread = "^0.3.0"
rtoml = "^0.5.0"
pmaw = "^1.0.4"
psaw = "^0.1.0"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
