[tool.poetry]
name = "pognlp"
version = "0.1.0"
description = ""
authors = ["Evan Goode <egoode6@gatech.edu>", "Celine MacKe <cmacke@gatech.edu>", "Ryan Fitzpatrick <ryanfitzpatrick@gatech.edu>", "Nealie Glasser <nglasser3@gatech.edu>", "Horace Yao <horace.yao@gatech.edu>"]
license = "The Unlicense"

[tool.poetry.scripts]
pognlp = "pognlp.pognlp:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
python-dateutil = "^2.8.1"
praw = "^7.2.0"
vaderSentiment = "^3.3.2"
appdirs = "^1.4.4"
numpy = "^1.20.0"
black = "^20.8b1"
pre-commit = "^2.10.1"
tkthread = "^0.3.0"
rtoml = "^0.5.0"
pmaw = "^1.0.4"
psaw = "^0.1.0"
dateparser = "^1.0.0"
pandas = "^1.2.3"
matplotlib = "^3.4.1"
spacy = "^3.0.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl"}
mypy = "^0.812"
pyinstaller = "^4.3"
compress-pickle = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
